--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,123 +1,93 @@
 <div class="container">
 
-    <div class="page-title">
-      <div class="row gutters">
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-          <h5 class="title">1 day chat App</h5>
-          <p>All messages will be deleted at every 00:00 UTC</p>
-        </div>
+  <div class="page-title">
+    <div class="row gutters">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+        <h5 class="title">1 day chat App</h5>
+        <p>All messages will be deleted at every 00:00 UTC</p>
       </div>
     </div>
-  
-    <div class="content-wrapper">
-      <div class="row gutters">
-        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-          <div class="card m-0">
-            <div class="row no-gutters">
-              <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-3">
-                <div class="users-container">
-                  <div class="form-group">
-                    <label for="exampleFormControlSelect1">1. Choose your user</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>Joyse</option>
-                      <option>Sam</option>
-                      <option>Russell</option>
-                    </select>
-                  </div>
-                  <p>2. Choose your Channel</p>
-                  <ul class="users">
-                    <li class="channel active-user">
-                      <p class="name-time">
-                        <span class="name">General Channel</span>
-                      </p>
-                    </li>
-                    <li class="channel">
-                      <p class="name-time">
-                        <span class="name">Technology Channel</span>
-                      </p>
-                    </li>
-                    <li class="channel">
-                      <p class="name-time">
-                        <span class="name">LGTM Channel</span>
-                      </p>
-                    </li>
-                  </ul>
+  </div>
+
+  <div class="content-wrapper">
+    <div class="row gutters">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="card m-0">
+          <div class="row no-gutters">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-3 col-3">
+              <div class="users-container">
+                <div class="form-group">
+                  <label for="exampleFormControlSelect1">1. Choose your user</label>
+                  <select class="form-control" id="exampleFormControlSelect1" (change)="onChangeUser($event)">
+                    <option *ngFor="let user of users" value="{{user.id}}">{{user.name}}
+                    </option>
+                  </select>
                 </div>
+                <p>2. Choose your Channel</p>
+                <ul class="users">
+                  <li class="channel" [ngClass]="selectedChannel == channels.General ? 'active-user':''"
+                    (click)="onChangeChannel(channels.General)">
+                    <p class="name-time">
+                      <span class="name">General Channel</span>
+                    </p>
+                  </li>
+                  <li class="channel" [ngClass]="selectedChannel == channels.Technology? 'active-user':''"
+                    (click)="onChangeChannel(channels.Technology)">
+                    <p class="name-time">
+                      <span class="name">Technology Channel</span>
+                    </p>
+                  </li>
+                  <li class="channel" [ngClass]="selectedChannel == channels.LGTM ?'active-user':''"
+                    (click)="onChangeChannel(channels.LGTM)">
+                    <p class="name-time">
+                      <span class="name">LGTM Channel</span>
+                    </p>
+                  </li>
+                </ul>
               </div>
-              <div class="col-xl-8 col-lg-8 col-md-8 col-sm-9 col-9">
-                <div class="selected-user">
-                  <span>LGTM Channel</span>
-                </div>
-                <div class="chat-container">
-                  <ul class="chat-box chatContainerScroll">
-                    <li class="chat-left">
-                      <button type="button" class="btn btn-info">
-                        Read More <i class="fa fa-arrow-up"></i>
-                      </button>
-                    </li>
-                    <li class="chat-left">
-                      <div class="chat-avatar">
-                        <img src=".../../../assets/images/Russell.png" alt="User">
-                        <div class="chat-name">Russell</div>
-                      </div>
-                      <div class="chat-text">Hello, I'm Russell.
-                        <br>How can I help you today?
-                      </div>
-                      <div class="chat-hour">08:55</div>
-                    </li>
-                    <li class="chat-right">
-                      <div class="chat-hour">08:56 <span class="fa fa-check-circle"></span> <span
-                          class="chat-message">Sent</span></div>
-                      <div class="chat-text">Hi, Russell
-                        <br> I need more information about Developer Plan.
-                      </div>
-                      <div class="chat-avatar">
-                        <img src="../../../assets/images/Joyse.png" alt="User">
-                        <div class="chat-name">Joyse</div>
-                      </div>
-                    </li>
-                    <li class="chat-left">
-                      <div class="chat-avatar">
-                        <img src="../../../assets/images/Sam.png" alt="User">
-                        <div class="chat-name">Sam</div>
-                      </div>
-                      <div class="chat-text">Are we meeting today?
-                        <br>Project has been already finished and I have results to show you.
-                      </div>
-                      <div class="chat-hour">08:57</div>
-                    </li>
-                    <li class="chat-right">
-                      <div class="chat-hour">08:59 <span class="fa fa-check-circle"></span> <span
-                          class="chat-message">Sent</span></div>
-                      <div class="chat-text">Well I am not sure.
-                        <br>I have results to show you.
-                      </div>
-                      <div class="chat-avatar">
-                        <img src="../../../assets/images/Joyse.png" alt="User">
-                        <div class="chat-name">Joyse</div>
-                      </div>
-                    </li>
-                    <li class="chat-right">
-                      <div class="chat-hour">09:02 <span class="fa fa-exclamation-circle"></span> <span
-                          class="chat-message">Error</span></div>
-                      <div class="chat-text">Hey, can you receive my chat?</div>
-                      <div class="chat-avatar">
-                        <img src="../../../assets/images/Joyse.png" alt="User">
-                        <div class="chat-name">Joyse</div>
-                      </div>
-                    </li>
-                    <li class="left">
-                      <button type="button" class="btn btn-info">
-                        Read More <i class="fa fa-arrow-down"></i>
-                      </button>
-                    </li>
-                  </ul>
-                  <div class="form-group mt-3 mb-0">
-                    <textarea class="form-control" rows="3" placeholder="Type your message here..."></textarea>
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-9 col-9">
+              <div class="selected-user">
+                <span>LGTM Channel</span>
+              </div>
+              <div class="chat-container">
+                <ul class="chat-box chatContainerScroll">
+                  <li class="chat-left">
                     <button type="button" class="btn btn-info">
-                      Send Message <i class="fa fa-send"></i>
+                      Read More <i class="fa fa-arrow-up"></i>
                     </button>
-                  </div>
+                  </li>
+
+                  <ng-container *ngFor="let message of messages">
+                    <li class="chat-left" *ngIf="message.user? message.user.id !== selectedUser?.id:false">
+                      <div class="chat-avatar">
+                        <img [src]="message.user?message.user.image:''" alt="User">
+                        <div class="chat-name">{{message.userId}}</div>
+                      </div>
+                      <div class="chat-text">{{message.text}}</div>
+                      <div class="chat-hour">{{message.time}}</div>
+                    </li>
+                    <li class="chat-right" *ngIf="message.user? message.user.id === selectedUser?.id:false">
+                      <div class="chat-hour">{{message.time}} <span class="fa fa-check-circle"></span> <span
+                          class="chat-message">Sent</span></div>
+                      <div class="chat-text">{{message.text}}</div>
+                      <div class="chat-avatar">
+                        <img [src]="message.user?message.user.image:''" alt="User">
+                        <div class="chat-name">{{message.userId}}</div>
+                      </div>
+                    </li>
+                  </ng-container>
+                  <li class="left">
+                    <button type="button" class="btn btn-info">
+                      Read More <i class="fa fa-arrow-down"></i>
+                    </button>
+                  </li>
+                </ul>
+                <div class="form-group mt-3 mb-0">
+                  <textarea class="form-control" rows="3" placeholder="Type your message here..."></textarea>
+                  <button type="button" class="btn btn-info">
+                    Send Message <i class="fa fa-send"></i>
+                  </button>
                 </div>
               </div>
             </div>
@@ -126,4 +96,4 @@
       </div>
     </div>
   </div>
-  
+</div>
